Improve landscape layout

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -29,3 +29,9 @@ $transition-length: .3s;
     @content;
   }
 }
+
+@mixin orientation($orientation) {
+  @media screen and (orientation: $orientation) { 
+    @content;
+  }
+}
