--- a/src/styles/widgets.scss
+++ b/src/styles/widgets.scss
@@ -1,9 +1,8 @@
 .logo-small {
-  position: absolute;
   width: 42.26px;
   height: 33.5px;
-  left: 10px;
-  top: 15px;
+  margin-left: 10px;
+  margin-top: 15px;
 
   background: url('../images/logo.png');
   background-size: contain;
