--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,8 +5,6 @@
 @import url('https://fonts.googleapis.com/css?family=Prompt&display=swap');
 
 body {
-  background: linear-gradient(180deg, #F9C455 0%, #EE7398 35.42%);
-  background-attachment: fixed;
   font-family: Prompt;
   font-weight: normal;
 }
@@ -14,6 +12,7 @@ body {
 .App {
   width: 100%;
   height: 100%;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
 .background {
@@ -24,14 +23,21 @@ body {
   left: 0;
   z-index: -1;
 
-  background: url('../images/background.svg') bottom;
+  background: linear-gradient(180deg, #F9C455 0%, #EE7398 35.42%);
   background-attachment: fixed;
-  background-repeat: no-repeat;
+
+  @include orientation(portrait) {
+    &.art {
+      background: url('../images/background.svg') bottom no-repeat;
+      background-attachment: fixed;
+      background-size: contain;
+    }
+  }
 }
 
 .content-card {
   display: block;
-  margin: 60px 30px 30px 30px;
+  margin: 16px 30px 30px 30px;
   padding: 20px 36px 28px 36px;
 
   background: $white;
