--- a/src/styles/widgets.scss
+++ b/src/styles/widgets.scss
@@ -27,25 +27,26 @@
   }
 }
 
-input {
-  width: 100%;
-
-  padding: 0 0 4px 0;
-
+.ant-input {
+  padding: 0;
   border: none;
-  border-bottom: 1px solid #192134;
-
-  transition: all $transition-length;
+  border-bottom: 1px solid $dark-blue;
+  border-radius: 0;
 
   &:focus {
-    border-bottom-color: $pink;
+    box-shadow: 0 2px 0 0 rgba(238, 115, 152, 0.2);
   }
 
   &::placeholder {
-    font-weight: normal;
     font-size: 11px;
-    line-height: 21px;
+    line-height: 24px;
 
     color: rgba(25, 33, 52, 0.4);
+  }
+}
+
+.has-error {
+  .ant-input:focus {
+    box-shadow: 0 2px 0 0 rgba(245, 34, 45, 0.2);
   }
 }
