--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -70,3 +70,21 @@ form {
     font-size: 18px;
   }
 }
+
+.confirmation-text {
+  margin: 0 50px;
+  
+  color: $dark-blue;
+  font-weight: 600;
+  font-size: 16px;
+  text-align: center;
+}
+
+.modal-footer {
+  margin: 24px 0 8px 0;
+  text-align: center;
+
+  button {
+    margin: 0 10px;
+  }
+}
