Minor layout adjustments

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -47,6 +47,7 @@ body {
   @include small-mobile {
     margin-left: 0px;
     margin-right: 0px;
+    margin-bottom: 0px;
 
     border-radius: 0px;
   }
