--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -88,3 +88,16 @@ form {
     margin: 0 10px;
   }
 }
+
+.ant-modal-mask {
+  background-color: rgba(51, 51, 51, 0.5);
+}
+
+.ant-modal-content {
+  margin: 0 16px;
+  border-radius: 10px;
+
+  @include small-mobile {
+    margin: 0;
+  }
+}
