Move to react-hook-form

--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -69,6 +69,10 @@ form {
 
     font-size: 18px;
   }
+
+  #input-container-faculty > .ant-form-item {
+    margin-top: 4px;
+  }
 }
 
 .confirmation-text {
