Implement success page design

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -3,6 +3,7 @@ $pink: #ee7398;
 $orange: #f9c455;
 $dark-blue: #192134;
 $light-grey: rgba(25, 33, 52, 0.2);
+$mid-grey: rgba(25, 33, 52, 0.4);
 
 $transition-length: .3s;
 
