--- a/src/styles/widgets.scss
+++ b/src/styles/widgets.scss
@@ -10,14 +10,18 @@
 
 .orange-button {
   display: block;
+  width: 152px;
+  padding: 8px 0;
 
   background: $orange;
-  border: none;
+  border: 1px solid $orange;
   border-radius: 9999px;
   box-shadow: 0px 4px 30px $light-grey;
   color: $dark-blue;
 
   font-weight: 500;
+  font-size: 18px;
+  line-height: 18px;
 
   transition: all $transition-length;
 
@@ -46,7 +50,7 @@
     font-size: 11px;
     line-height: 24px;
 
-    color: rgba(25, 33, 52, 0.4);
+    color: $mid-grey;
   }
 }
 
