--- a/src/styles/register-success.scss
+++ b/src/styles/register-success.scss
@@ -1,37 +1,39 @@
 @import 'vars';
 @import 'widgets';
 
-.success-tick {
-  margin-top: 80px;
-}
+#register-success {
+  .success-tick {
+    margin-top: 80px;
+  }
 
-h1 {
-  margin-top: 36px;
-  margin-bottom: -4px;
+  h1 {
+    margin-top: 36px;
+    margin-bottom: -4px;
 
-  color: $dark-blue;
-  font-weight: bold;
-  font-size: 30px;
-}
+    color: $dark-blue;
+    font-weight: bold;
+    font-size: 30px;
+  }
 
-p {
-  margin-top: 0;
-  margin-bottom: 0;
-  color: $mid-grey
-}
+  p {
+    margin-top: 0;
+    margin-bottom: 0;
+    color: $mid-grey
+  }
 
-#backtohome {
-  @extend .orange-button;
+  #backtohome {
+    @extend .orange-button;
 
-  margin: 100px auto 0 auto;
-}
+    margin: 100px auto 0 auto;
+  }
 
-#checkinfo {
-  @extend .orange-button;
-  
-  margin: 24px auto 54px auto;
+  #checkinfo {
+    @extend .orange-button;
+    
+    margin: 24px auto 54px auto;
 
-  background-color: transparent;
-  border: 1px solid $orange;
-  box-shadow: none;
+    background-color: transparent;
+    border: 1px solid $orange;
+    box-shadow: none;
+  }
 }
