--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -58,3 +58,16 @@ body {
     margin-right: auto;
   }
 }
+
+.ant-modal-mask {
+  background-color: rgba(51, 51, 51, 0.5);
+}
+
+.ant-modal-content {
+  margin: 0 16px;
+  border-radius: 10px;
+
+  @include small-mobile {
+    margin: 0;
+  }
+}
