--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -72,7 +72,9 @@
       margin-top: 4px;
     }
   }
+}
 
+.register-confirm-modal {
   .confirmation-text {
     margin: 0 50px;
     
@@ -88,19 +90,6 @@
 
     button {
       margin: 0 10px;
-    }
-  }
-
-  .ant-modal-mask {
-    background-color: rgba(51, 51, 51, 0.5);
-  }
-
-  .ant-modal-content {
-    margin: 0 16px;
-    border-radius: 10px;
-
-    @include small-mobile {
-      margin: 0;
     }
   }
 }
