--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -62,6 +62,8 @@ body {
 
 .ant-modal-mask {
   background-color: rgba(51, 51, 51, 0.5);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
 }
 
 .ant-modal-content {
