--- a/src/styles/register-success.scss
+++ b/src/styles/register-success.scss
@@ -8,11 +8,11 @@
 
   h1 {
     margin-top: 36px;
-    margin-bottom: -4px;
 
     color: $dark-blue;
     font-weight: bold;
     font-size: 30px;
+    line-height: 45px;
   }
 
   p {
