--- a/src/styles/register-success.scss
+++ b/src/styles/register-success.scss
@@ -1,5 +1,5 @@
-@import 'vars';
-@import 'widgets';
+@import "vars";
+@import "widgets";
 
 #register-success {
   .success-tick {
@@ -18,7 +18,7 @@
   p {
     margin-top: 0;
     margin-bottom: 0;
-    color: $mid-grey
+    color: $grey4;
   }
 
   #backtohome {
@@ -29,7 +29,7 @@
 
   #checkinfo {
     @extend .orange-button;
-    
+
     margin: 24px auto 54px auto;
 
     background-color: transparent;
