--- a/src/styles/widgets.scss
+++ b/src/styles/widgets.scss
@@ -4,7 +4,7 @@
   margin-left: 10px;
   margin-top: 15px;
 
-  background: url('../images/logo.png');
+  background: url("../images/logo.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -17,7 +17,7 @@
   background: $orange;
   border: 1px solid $orange;
   border-radius: 9999px;
-  box-shadow: 0px 4px 30px $light-grey;
+  box-shadow: 0px 4px 30px $grey2;
   color: $dark-blue;
 
   font-weight: 500;
@@ -27,8 +27,12 @@
   cursor: pointer;
   transition: all $transition-length;
 
-  &:hover, &:focus {
-    $hover-color: lighten($color: $orange, $amount: 5);
+  &:hover,
+  &:focus {
+    $hover-color: lighten(
+      $color: $orange,
+      $amount: 5
+    );
     background: $hover-color;
     box-shadow: 0px 4px 30px $hover-color;
   }
@@ -52,7 +56,7 @@
     font-size: 11px;
     line-height: 24px;
 
-    color: $mid-grey;
+    color: $grey4;
   }
 }
 
