--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -53,7 +53,7 @@ body {
     border-radius: 0px;
   }
 
-  @include md-down {
+  @include sm-up {
     width: 400px;
     margin-left: auto;
     margin-right: auto;
