--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -3,8 +3,10 @@
 
 .landing-container {
   position: relative;
+  height: 500px;
   min-height: 100vh;
   padding-top: $space * 12;
+  
   .title-container {
     display: flex;
     justify-content: center;
@@ -55,19 +57,21 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+
     .register-button {
+      @extend .orange-button;
+
+      width: initial;
+
+      font-weight: 400;
       font-size: 20px;
       color: $dark-blue;
-      font-weight: 400;
-      background-color: $orange;
-      border: 0;
-      border-radius: 9999px;
-      box-shadow: 0px 4px 30px rgba(25, 33, 52, 0.2);
       padding-left: $space * 6;
       padding-right: $space * 6;
       padding-top: $space * 2.5;
       padding-bottom: $space * 2.5;
       line-height: 0;
+
       @include sm-up {
         font-size: 30px;
         padding-left: $space * 7;
