--- a/src/styles/widgets.scss
+++ b/src/styles/widgets.scss
@@ -7,6 +7,7 @@
   background: url("../images/logo.png");
   background-size: contain;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 .orange-button {
