Improve logo hit target

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -38,7 +38,7 @@ body {
 
 .content-card {
   display: block;
-  margin: 16px 30px 30px 30px;
+  margin: 0 30px 30px 30px;
   padding: 20px 36px 28px 36px;
 
   background: $white;
