--- a/src/styles/widgets.scss
+++ b/src/styles/widgets.scss
@@ -1,13 +1,11 @@
 .logo-small {
-  width: 42.26px;
-  height: 33.5px;
-  margin-left: 10px;
-  margin-top: 15px;
+  display: inline-block;
 
-  background: url("../images/logo.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  cursor: pointer;
+  img {
+    width: 42.26px;
+    height: 33.5px;
+    margin: 16px 10px 10px 10px;
+  }
 }
 
 .orange-button {
