--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -13,6 +13,16 @@ $grey4: rgba(25, 33, 52, 0.4);
 $grey5: rgba(25, 33, 52, 0.5);
 $transition-length: 0.3s;
 
+@font-face {
+  font-family: 'Gotham Thin';
+  src: url('../fonts/Gotham\ Thin.otf');
+}
+
+@font-face {
+  font-family: 'Gotham Ultra';
+  src: url('../fonts/Gotham\ Ultra.otf');
+}
+
 // breakpoint
 @mixin media-breakpoint-down($width) {
   @media screen and (max-width: $width - 1) {
@@ -148,5 +158,20 @@ $transition-length: 0.3s;
     @include sm-up {
       display: none;
     }
+  }
+}
+
+@mixin fluid-aspect($ratio: 1 1, $selector: "> :first-child") {
+  $selector: unquote($selector);
+
+  padding-bottom: percentage(nth($ratio, 2) / nth($ratio, 1));
+  position: relative;
+
+  #{$selector} {
+      left: 0;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      width: 100%;
   }
 }
