--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,76 +1,12 @@
 @import "reset-css";
-@import "vars";
-@import "reset";
-@import "widgets";
-
 @import url("https://fonts.googleapis.com/css?family=Prompt&display=swap");
 
-body {
-  font-family: Prompt;
-  font-weight: normal;
+@font-face {
+  font-family: 'Gotham Thin';
+  src: url('../fonts/Gotham\ Thin.otf');
 }
 
-.App {
-  width: 100%;
-  height: 100%;
-  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
-}
-
-.background {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  z-index: -1;
-
-  background: linear-gradient(180deg, #f9c455 0%, #ee7398 35.42%);
-  background-attachment: fixed;
-
-  @include orientation(portrait) {
-    &.art {
-      background: url("../images/background.svg") bottom no-repeat;
-      background-attachment: fixed;
-      background-size: contain;
-    }
-  }
-}
-
-.content-card {
-  display: block;
-  margin: 0 30px 30px 30px;
-  padding: 20px 36px 28px 36px;
-
-  background: $white;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-
-  @include xs-down {
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-bottom: 0px;
-
-    border-radius: 0px;
-  }
-
-  @include sm-up {
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-.ant-modal-mask {
-  background-color: rgba(51, 51, 51, 0.5);
-  -webkit-backdrop-filter: saturate(180%) blur(20px);
-  backdrop-filter: saturate(180%) blur(20px);
-}
-
-.ant-modal-content {
-  margin: 0 16px;
-  border-radius: 10px;
-
-  @include xs-down {
-    margin: 0;
-  }
+@font-face {
+  font-family: 'Gotham Ultra';
+  src: url('../fonts/Gotham\ Ultra.otf');
 }
