--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,11 +2,11 @@
 @import url("https://fonts.googleapis.com/css?family=Prompt&display=swap");
 
 @font-face {
-  font-family: 'Gotham Thin';
-  src: url('../fonts/Gotham\ Thin.otf');
+  font-family: "Gotham Thin";
+  src: url("../fonts/Gotham\ Thin.otf");
 }
 
 @font-face {
-  font-family: 'Gotham Ultra';
-  src: url('../fonts/Gotham\ Ultra.otf');
+  font-family: "Gotham Ultra";
+  src: url("../fonts/Gotham\ Ultra.otf");
 }
