--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,5 @@
 @import "reset-css";
-@import url("https://fonts.googleapis.com/css?family=Prompt&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Prompt:200,300,400,500,600,700&display=swap');
 
 @font-face {
   font-family: "Gotham Thin";
